@@ -246,14 +246,16 @@ public class ClientUtils {
   }
 
   /**
-   * Returns the value encoded properly so it can be appended after a
+   * Returns the (literal) value encoded properly so it can be appended after a <code>name=</code>
+   * local-param key.
    *
-   * <pre>name=</pre>
-   *
-   * local-param.
+   * <p>NOTE: This method assumes <code>$</code> is a literal character that must be quoted. (It
+   * does not assume strings starting <code>$</code> should be treated as param refrenes)
    */
   public static String encodeLocalParamVal(String val) {
     int len = val.length();
+    if (0 == len) return "''"; // quoted empty string
+
     int i = 0;
     if (len > 0 && val.charAt(0) != '$') {
       for (; i < len; i++) {
